--- a/shop-back/react-sneakers/src/index.scss
+++ b/shop-back/react-sneakers/src/index.scss
@@ -70,6 +70,10 @@ header {
       margin-right: 10px;
       cursor: pointer;
     }
+    span{
+      cursor: pointer;
+      
+    }
   }
   li {
     margin-right: 30px;
@@ -257,3 +261,26 @@ header {
     color: #5C5C5C;
   }
 }
+
+
+/* Add these styles to your CSS file */
+.orderForm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+}
+
+.orderForm label {
+  font-weight: bold;
+}
+
+.orderForm input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  margin-top: 4px;
+}
+
+
+
